# RIST

./: .gitignore  LICENSE  MANIFEST.in  README.md  index.html  pyproject.toml  setup.py
configs/: eval.yaml  train.yaml
configs/callbacks/: default.yaml
configs/data/: keypointnet.yaml
configs/experiment/: keypointnet.yaml
configs/logger/: wandb.yaml
configs/model/: rist.yaml  rist_simple.yaml
configs/optim/: adam.yaml  adamw.yaml
configs/paths/: default.yaml
configs/scheduler/: none.yaml  onecyclelr.yaml
configs/sweep/: rist_sweep.yaml  rist_sweep_kubeflow.yaml
configs/trainer/: ddp.yaml  default.yaml
docker/: Dockerfile.b200  docker_build.sh
src/: __init__.py  eval.py  train.py
src/data/: __init__.py  keypointnet.py  transforms.py
src/data/datasets/: __init__.py  keypointnet_dataset.py
src/data/utils/: __init__.py  download.py
src/losses/: __init__.py  loss.py
src/models/: __init__.py
src/models/lightning_modules/: __init__.py  rist_module.py
src/models/networks/: __init__.py
src/models/networks/decoder/: __init__.py  implicit_fun.py
src/models/networks/encoder/: __init__.py  vn_dgcnn.py  vn_layers.py  vn_simple.py
src/utils/: __init__.py  common.py  instantiators.py  logging_utils.py  metrics.py
